add coveralls install to travis settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 install:
     - "pip install -r requirements/base.txt"
     - "pip install -r requirements/test.txt"
+    - "pip install coveralls"
 # command to run tests
 script: py.test -v --cov *.py
 after_success:
